--- a/test/fixtures/reservations.yml
+++ b/test/fixtures/reservations.yml
@@ -3,11 +3,9 @@
 one:
   start_date: 2021-05-28
   end_date: 2021-05-28
-  nights: 1
-  number_of_guests: 1
+  adults: 1
 
 two:
   start_date: 2021-05-28
   end_date: 2021-05-28
-  nights: 1
-  number_of_guests: 1
+  adults: 1
